* Fixed a few spelling errors in javadocs
* Added documentation to tests for MutationOperator and
  CrossoverOPerator (see request 1434187)
* Added verbose output for chart example indicating in which
  the created chart image has been put
* Moved classes Force and SupergeneTest to examples folder
  and renamed the latter one appropriately
* Slightly changed AbstractSupergene.toString()

2.6
-----------------------------------------------------------
* Improved general architecture a lot
* Extended the javadoc documentation a lot
* Added some type casts to make JGAP compatible with Java 5
* Added interface IChromosome for Chromosome class and used
  it instead of Chromosome wherever possible!
* Added new mechanism for creating default objects, such
  as random generators etc.
  --> interface org.jgap.IJAGPFactory as well as impl.
       org.jgap.impl.JGAPFactory.
  JGAPFactory Could be replaced by a user-defined factory
  via System.setproperty(...)
* Introduced ICloneHandler, accessible via JGAPFactory
* Introduced IInitializer, accessible via JGAPFactory
* Introduced ICompareToHandler, accessible via JGAPFactory
* Introduced hook method newGeneInternal in BaseGene
* Introduced base class BaseConfigurable for interface
  Configurable
* Added example for multiobjectives
* Added example for dynamic mutation
* Enhanced interface FitnessEvaluator
* Added equals and compareTo to CrossoverOperator
* Added interface org.jgap.ICompsiteGene for
  genes that may contain other genes
* Added interface org.jgap.IChromosomePool for
  class ChromosomePool
* Added interface org.jgap.event.IEventManager for
  class EventManager
* Enhanced interface IUniversalRateCalculator
* Renamed method getGene in Supergene to geneAt
  (--> same name as in class CompositeGene)
* Made IGeneConstraintChecker serializable
* Made IUniversalRateCalculator serializable
* Made field m_crossoverRate in class CrossoverOperator
  private (was protected)