@@ -267,6 +267,11 @@ FitnessFunction</h4>
 <p class="text">Use the constant <font face="Courier New">FitnessFunction.NO_FITNESS_VALUE</font>
 instead.</p>
 
+<h4 class="subHeader">Since 3.0: Gene's new method getConfiguration()</h4>
+<p class="text">This method returns the configuration set explicitly for the
+Gene. This is new because in previous versions of JGAP, the configuration was a
+Singleton.</p>
+
 <h2 class="docTitle">Final remarks</h2>
 
 <p class="text">It should be quite straight forward upgrading from version 1.1 to 2.0. With
